# energy-trading-quant-tools

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: trader_dashboard.py
docs/: INTRADAY_EUROPEAN_INFRASTRUCTURE.md  PM_DEFENSE.md  architecture.md  index.md
docs/models/: ou.md
k8s/: deployment.yaml
notebooks/: 01_example_calibration.ipynb
src/energytrading/: __init__.py  cli.py
src/energytrading/api/: auth.py  main.py
src/energytrading/backtest/: engine.py  event_driven.py  execution_realism.py  gate_closure_engine.py  strategies.py  twap_vwap.py
src/energytrading/core/: config.py  events.py
src/energytrading/data/: __init__.py  clients.py  eia_client.py  entsoe_client.py  ingestors.py  normalizer.py  streams.py  synthetic.py
src/energytrading/execution/: engine.py
src/energytrading/features/: __init__.py  energy_features.py  feature_store.py  intraday_features.py  transforms.py
src/energytrading/intern_project/: wind_shock_detector.py
src/energytrading/market_microstructure/: __init__.py  impact.py  order_book.py
src/energytrading/ml/: __init__.py  ensemble.py  experiment_tracker.py  hyperopt.py  model_registry.py
src/energytrading/models/: __init__.py  arima.py  cointegration.py  deep_learning.py  forward_curve.py  heston.py  jump_diffusion.py  kalman.py  lgbm_forecaster.py  ou.py  regime_switching.py  schwartz_smith.py  seasonal.py  spatial_copula.py
src/energytrading/optimization/: __init__.py  gas_storage.py  hydro.py  milp.py
src/energytrading/portfolio/: __init__.py  hedging.py  optimization.py  regime_allocation.py
src/energytrading/powergrid/: __init__.py  gnn.py  lmp.py  power_flow.py
src/energytrading/pricing/: battery.py  imbalance.py  spark_spread.py  spreads.py  tolling.py
src/energytrading/regimes/: __init__.py  detector.py  turbulence.py
src/energytrading/risk/: __init__.py  copula.py  evt.py  greeks.py  metrics.py  monte_carlo.py  scenarios.py  stress_testing.py
src/energytrading/rl/: __init__.py  agents.py  environment.py
src/energytrading/signals/: __init__.py  breakout.py  calendar_spread.py  ensemble.py  microstructure.py  ml_forecasting.py  regime.py  renewables.py  statistical.py  wind_shock.py
src/energytrading/simulation/: __init__.py  monte_carlo.py  scenarios.py
src/energytrading/storage/: bitemporal.py
src/energytrading/strategy/: virtual_bidding.py
src/energytrading/streaming/: __init__.py  kafka_handler.py  redis_handler.py  websocket_handler.py
src/energytrading/validation/: __init__.py  walk_forward.py
src/energytrading/weather/: __init__.py  derivatives.py  forecasting.py  ingestion.py
tests/: test_advanced_features.py  test_advanced_markets.py  test_execution_signals.py  test_features_data.py  test_infrastructure.py  test_intraday.py  test_new_models.py  test_optimization.py  test_ou.py  test_production_pipeline.py  test_quant_interview.py  test_risk.py  test_risk_expanded.py
